--- a/css/css/style.css
+++ b/css/css/style.css
@@ -1,9 +1,11 @@
 body {
-  margin: 0;
-  font-family: Arial, sans-serif;
   background-color: #101f14;
   color: #eee;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
+
 
 nav {
   background-color: #1b2e1f;
