--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,14 @@ nav {
 }
 
 .logo {
+  position: fixed;
+  top: 10px;
+  left: 10px;
   height: 60px;
   width: auto;
+  z-index: 1000;
 }
+
 
 .nav-links a {
   color: #a9ff9b;
