--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,23 @@ footer {
     background-color: #1b1b1b;
     margin-top: 2rem;
 }
+/* galerija */
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.gallery-grid img {
+  width: 100%;
+  border-radius: 8px;
+  object-fit: cover;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.gallery-grid img:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px #7ac142;
+}
+
