--- a/css/style.css
+++ b/css/style.css
@@ -256,4 +256,51 @@ h2 {
     display: flex;
     flex-direction: column;
 }
+/* Lightbox pozadina */
+.lightbox {
+  display: none; /* sakriveno po defaultu */
+  position: fixed;
+  z-index: 9999;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.9);
+}
+
+/* Slika u lightboxu */
+.lightbox-content {
+  margin: auto;
+  display: block;
+  max-width: 80%;
+  max-height: 80vh;
+  border-radius: 8px;
+}
+
+/* Caption ispod slike */
+#caption {
+  margin: auto;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 40px;
+}
+
+/* Dugme za zatvaranje */
+.close {
+  position: absolute;
+  top: 20px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover {
+  color: #bbb;
+}
+
 
