--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,8 @@ button:hover {
   align-items: center;
   z-index: 9999;
 
-  pointer-events: auto; /* dozvoli klikove kada je vidljiv */
+  pointer-events: auto; /* dozvoli klikove kad je vidljiv */
+  user-select: none; /* ne dozvoli selekciju pozadine */
 }
 
 #lightbox.hidden {
@@ -395,6 +396,9 @@ button:hover {
   max-height: 80vh;
   border-radius: 8px;
   box-shadow: 0 0 20px #000;
+
+  pointer-events: auto; /* dozvoli klik na sliku */
+  user-select: auto;
 }
 
 #lightbox .close {
@@ -404,6 +408,8 @@ button:hover {
   font-size: 36px;
   color: white;
   cursor: pointer;
+
+  pointer-events: auto; /* dozvoli klik */
   user-select: none;
 }
 
@@ -413,12 +419,14 @@ button:hover {
   font-size: 48px;
   color: white;
   cursor: pointer;
-  user-select: none;
   padding: 0 15px;
   transform: translateY(-50%);
   background-color: rgba(0,0,0,0.3);
   border-radius: 4px;
   transition: background-color 0.3s ease;
+
+  pointer-events: auto; /* dozvoli klik */
+  user-select: none;
 }
 
 #lightbox .nav span:hover {
