--- a/css/style.css
+++ b/css/style.css
@@ -423,6 +423,23 @@ button:hover {
   transform: scale(1.2);
 }
 
+//----------------//
 
+#back-to-home {
+  display: inline-block;
+  margin-bottom: 1rem;
+  background-color: #4caf50;
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#back-to-home:hover {
+  background-color: #388e3c;
+}
+//---------------------//
 
 
