--- a/css/style.css
+++ b/css/style.css
@@ -441,6 +441,26 @@ button:hover {
   background-color: #388e3c;
 }
 //---------------------//
+#images-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  margin-bottom: 2rem;
+}
+
+#images-container img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  cursor: pointer;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+#images-container img:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px #7ac142;
+}
 
 //-------------------------------//
 
