--- a/css/style.css
+++ b/css/style.css
@@ -449,13 +449,15 @@ button:hover {
 }
 
 #images-container img {
-  width: 15%;
-  height: 50;
+  width: 150px;
+  height: auto;
+  max-width: 100%;
   border-radius: 8px;
   cursor: pointer;
   object-fit: cover;
   transition: transform 0.3s ease;
 }
+
 
 #images-container img:hover {
   transform: scale(1.05);
