--- a/css/style.css
+++ b/css/style.css
@@ -443,24 +443,24 @@ button:hover {
 //---------------------//
 #images-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 20px;
   margin-bottom: 2rem;
 }
 
 #images-container img {
-  width: 100%;
-  height: auto;
+  width: 100%;         /* neka slika popuni celu grid ćeliju */
+  height: auto;        /* visina se prilagođava širini */
   border-radius: 8px;
   cursor: pointer;
   object-fit: cover;
   transition: transform 0.3s ease;
 }
 
-
 #images-container img:hover {
   transform: scale(1.05);
 }
+
 
 //-------------------------------//
 
