--- a/css/style.css
+++ b/css/style.css
@@ -512,6 +512,40 @@ button:hover {
 }
 
 
-//------------------------------//
+//-------------bolji tekst ispod slike i lokacija i opis-----------------//
+#lightbox-caption {
+    background: rgba(0, 0, 0, 0.6); /* poluprozirna tamna pozadina */
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 10px;
+    max-width: 80%;
+    font-size: 1rem;
+    text-align: left;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+    margin-top: 10px;
+}
+
+.caption-line {
+    margin: 6px 0;
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+}
+
+.caption-line strong {
+    margin-right: 5px;
+    font-weight: bold;
+}
+
+.caption-line em {
+    font-style: italic;
+    margin-left: 3px;
+}
+
+.caption-line::before {
+    content: attr(data-icon);
+    margin-right: 8px;
+}
+//-----------------------------//
 
 
