--- a/css/style.css
+++ b/css/style.css
@@ -708,5 +708,27 @@ img {
         font-size: 24px;
     }
 }
+
+#simple-lightbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 100%;
+    padding: 10px;
+}
+
+#lightbox-image {
+    max-width: 100%;
+    height: auto;
+}
+
+#lightbox-caption {
+    margin-top: 10px;
+    color: #fff;
+    text-align: center;
+    word-wrap: break-word;
+}
+
 //---------------------------//
 
