--- a/css/style.css
+++ b/css/style.css
@@ -701,7 +701,10 @@ img {
     color: #fff;
     text-align: center;
     word-wrap: break-word;
+    background: rgba(0, 0, 0, 0.6); /* tamna poluprozirna pozadina */
+    padding: 10px;
+    border-radius: 10px;
+    max-width: 90%;
 }
-
 //---------------------------//
 
