--- a/css/style.css
+++ b/css/style.css
@@ -680,9 +680,6 @@ img {
     .lightbox-arrow {
         font-size: 24px;
     }
-}
-
-}
 
 #lightbox-image {
     max-width: 100%;
@@ -691,14 +688,11 @@ img {
 
 @media (max-width: 768px) {
     #lightbox-caption {
-        position: absolute;
-        bottom: 60px;
-        left: 50%;
-        transform: translateX(-50%);
-        background: rgba(0, 0, 0, 0.85);
+        background: rgba(0, 0, 0, 0.85); /* tamna pozadina samo na mobilnom */
         padding: 10px;
         border-radius: 10px;
         max-width: 90%;
+    }
 }
 //---------------------------//
 
