--- a/css/style.css
+++ b/css/style.css
@@ -687,11 +687,26 @@ img {
 }
 
 @media (max-width: 768px) {
+    #simple-lightbox {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #lightbox-image {
+        max-width: 100%;
+        height: auto;
+    }
+
     #lightbox-caption {
-        background: rgba(0, 0, 0, 0.85); /* tamna pozadina samo na mobilnom */
+        position: static;  /* maknemo absolute */
+        background: rgba(0, 0, 0, 0.85);
         padding: 10px;
         border-radius: 10px;
+        margin-top: 10px;
         max-width: 90%;
+        text-align: center;
     }
 }
 //---------------------------//
